--- a/P010569.opf/meta.yml
+++ b/P010569.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P010569
+id: P010569
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W1KG12204
   title: བསམ་གཟུགས་ཀྱི་མཐའ་དཔྱོད་ལེགས་བཤད་མཛོད་ཀྱི་སྒོ་འབྱེད།
-  volume: ''
   author: ''
+  volumes: {}
