--- a/P010569.opf/meta.yml
+++ b/P010569.opf/meta.yml
@@ -4,4 +4,9 @@ source_metadata:
   id: bdr:W1KG12204
   title: བསམ་གཟུགས་ཀྱི་མཐའ་དཔྱོད་ལེགས་བཤད་མཛོད་ཀྱི་སྒོ་འབྱེད།
   author: ''
-  volumes: {}
+  volumes:
+    3e5377ada0c54a93af4871b8a7357759:
+      image_group_id: I1KG12258
+      title: ''
+      volume_number: 1
+      total_pages: 270
