--- a/P010569.opf/layers/v001/Pagination.yml
+++ b/P010569.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 31ae0baf8da24c11bac34819a27816bf
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   7429d437c9b5419cb446dbd1fc2598b6:
