--- a/P010569.opf/meta.yml
+++ b/P010569.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P010569
 initial_creation_type: ocr
+created_at: 28/03/2020
+last_modified_at: 25/11/2021
 source_metadata:
   id: bdr:W1KG12204
   title: བསམ་གཟུགས་ཀྱི་མཐའ་དཔྱོད་ལེགས་བཤད་མཛོད་ཀྱི་སྒོ་འབྱེད།
