--- a/P010569.opf/meta.yml
+++ b/P010569.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P010569
 initial_creation_type: ocr
 created_at: 28/03/2020
-last_modified_at: 25/11/2021
+last_modified_at: 2021-12-19 20:56:29.244215
 source_metadata:
   id: bdr:W1KG12204
   title: བསམ་གཟུགས་ཀྱི་མཐའ་དཔྱོད་ལེགས་བཤད་མཛོད་ཀྱི་སྒོ་འབྱེད།
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 270
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: true
